Pref: improve command usage

--- a/backend/hack/config.yaml
+++ b/backend/hack/config.yaml
@@ -35,3 +35,4 @@ gfcli:
   #   packSrc: "resource/public/www, manifest/config/config.yaml"
   #   output: "./temp/overflows"
   #   dumpEnv: false
+  #   cgo: true
