--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "overflow-frontend",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
