--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -5,14 +5,22 @@ RUN wget -O gf "https://github.com/gogf/gf/releases/latest/download/gf_$(go env 
     ./gf install -y && \
     rm ./gf
 
-FROM golang:1.22-alpine as dev
+FROM golang:1.23.2 as dev
 WORKDIR /var/www
 COPY --from=builder /go/bin/gf /go/bin/gf
 COPY --from=arigaio/atlas:latest-alpine /atlas /usr/local/bin/atlas
 COPY backend/manifest/database/Pgsql/migrations /migrations
+
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    pkg-config \
+    libappindicator3-dev \
+    gcc \
+    tzdata
+ENV CGO_ENABLED=1
+
 CMD atlas migrate apply --env docker && \
     gf run main.go
 
 ENV DEBIAN_FRONTEND noninteractive
-RUN apk add --no-cache tzdata
 ENV TZ=Asia/Shanghai
