--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "@mdi/js": "^7.4.47",
+    "axios": "^1.7.7",
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-i18n": "^10.0.4",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
