--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,8 @@
     "unplugin-fonts": "^1.1.1",
     "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.3.3",
-    "vite-plugin-vue-layouts": "^0.11.0",
+    "vite": "^6.2.1",
+    "vite-plugin-vue-layouts-next": "^0.0.3",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.4.0"
   }
